--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.2",
+    "@mui/material": "^6.4.2",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-awesome-reveal": "^3.8.1",
