--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "17.0.2",
     "react-awesome-reveal": "^3.8.1",
     "react-dom": "17.0.2",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
