--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
+    "lucide-react": "^0.475.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-awesome-reveal": "^3.8.1",
