--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
+    "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-awesome-reveal": "^3.8.1",
     "react-dom": "17.0.2",
+    "react-icons": "^5.5.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.1"
