--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react-awesome-reveal": "^3.8.1",
     "react-dom": "17.0.2",
     "react-icons": "^5.5.0",
+    "react-loading-icons": "^1.1.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.2.1"
+    "swiper": "^11.2.1",
+    "wavesurfer.js": "^7.9.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
